<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_app"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".ui.register_form.RegisterFormFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/name"
            android:textColor="@color/dark_bg_light_primary_text" />

        <EditText
            android:id="@+id/input_name"
            style="@style/EditText.Simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter"
            android:inputType="textCapWords|textPersonName"
            android:textAlignment="textEnd"
            android:textColor="@color/dark_bg_light_primary_text"
            android:textColorHint="@color/dark_bg_light_hint_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/phone"
            android:textColor="@color/dark_bg_light_primary_text" />

        <EditText
            android:id="@+id/input_phone"
            style="@style/EditText.Simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/phone_hint"
            android:inputType="numberSigned"
            android:textAlignment="textEnd"
            android:textColor="@color/dark_bg_light_primary_text"
            android:textColorHint="@color/dark_bg_light_hint_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/email"
            android:textColor="@color/dark_bg_light_primary_text" />

        <EditText
            android:id="@+id/input_email"
            style="@style/EditText.Simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textAlignment="textEnd"
            android:textColor="@color/dark_bg_light_primary_text"
            android:textColorHint="@color/dark_bg_light_hint_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/password"
            android:textColor="@color/dark_bg_light_primary_text" />

        <EditText
            android:id="@+id/input_password"
            style="@style/EditText.Simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter"
            android:inputType="textPassword"
            android:textAlignment="textEnd"
            android:textColor="@color/dark_bg_light_primary_text"
            android:textColorHint="@color/dark_bg_light_hint_text" />

    </LinearLayout>

    <Button
        android:id="@+id/button_register"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAllCaps="true" />
</LinearLayout>