<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_app"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".ui.reset_password.ResetPasswordFormFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/code"
            android:textColor="@color/dark_bg_light_primary_text" />

        <EditText
            android:id="@+id/input_code"
            style="@style/EditText.Simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter"
            android:inputType="numberSigned"
            android:textAlignment="textEnd"
            android:textColor="@color/dark_bg_light_primary_text"
            android:textColorHint="@color/dark_bg_light_hint_text" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/code_desc"
        android:textColor="@color/dark_bg_light_primary_text"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/new_password"
            android:textColor="@color/dark_bg_light_primary_text" />

        <EditText
            android:id="@+id/input_new_password"
            style="@style/EditText.Simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter"
            android:inputType="textPassword"
            android:textAlignment="textEnd"
            android:textColor="@color/dark_bg_light_primary_text"
            android:textColorHint="@color/dark_bg_light_hint_text" />

    </LinearLayout>

    <Button
        android:id="@+id/button_reset_password"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textAllCaps="true" />

</LinearLayout>